@@ -12,7 +12,6 @@ import com.powsybl.openloadflow.network.LfBus;
 import com.powsybl.openloadflow.network.LfNetwork;
 import com.powsybl.sc.util.*;
 import org.apache.commons.math3.complex.Complex;
-import org.apache.commons.math3.util.Pair;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -29,7 +28,7 @@ public class ShortCircuitUnbalancedEngine extends AbstractShortCircuitEngine {
 
     @Override
     public void run() {
-        LfNetwork lfNetwork = lfNetworks.get(0);
+        LfNetwork lfNetwork = lfNetworks.getFirst();
 
         if (parameters.getAnalysisType() == ShortCircuitEngineParameters.AnalysisType.SYSTEMATIC) {
             buildSystematicList(ShortCircuitFault.ShortCircuitType.MONOPHASED); // TODO : by default it is monophased, could be changed to choose type of systematic default
@@ -39,20 +38,18 @@ public class ShortCircuitUnbalancedEngine extends AbstractShortCircuitEngine {
         // We handle a pre-treatement of faults given in input:
         // - filtering of some inconsistencies on the bus identification
         // - addition of info in each fault to ease the identification in LfNetwork of iidm info
-        Pair<List<CalculationLocation>, List<CalculationLocation>> faultLists = buildFaultListsFromInputs();
-
-        solverFaultList = faultLists.getKey();
-        solverBiphasedFaultList = faultLists.getValue();
+        solverFaultList = buildFaultListsFromInputs();
+        List<CalculationLocation> solverLocationList = solverFaultList.stream().map(ShortCircuitFault::getCalculationLocation).toList();
 
         ImpedanceLinearResolutionParameters admittanceLinearResolutionParametersHomopolar = new ImpedanceLinearResolutionParameters(acLoadFlowParameters,
-                parameters.getMatrixFactory(), solverFaultList, parameters.isVoltageUpdate(),
+                parameters.getMatrixFactory(), solverLocationList, parameters.isVoltageUpdate(),
                 getAdmittanceVoltageProfileTypeFromParam(), getAdmittancePeriodTypeFromParam(), AdmittanceEquationSystem.AdmittanceType.ADM_THEVENIN_HOMOPOLAR,
-                parameters.isIgnoreShunts(), solverBiphasedFaultList);
+                parameters.isIgnoreShunts());
 
         ImpedanceLinearResolutionParameters admittanceLinearResolutionParametersDirect = new ImpedanceLinearResolutionParameters(acLoadFlowParameters,
-                parameters.getMatrixFactory(), solverFaultList, parameters.isVoltageUpdate(),
+                parameters.getMatrixFactory(), solverLocationList, parameters.isVoltageUpdate(),
                 getAdmittanceVoltageProfileTypeFromParam(), getAdmittancePeriodTypeFromParam(), AdmittanceEquationSystem.AdmittanceType.ADM_THEVENIN,
-                parameters.isIgnoreShunts(), solverBiphasedFaultList);
+                parameters.isIgnoreShunts());
 
         ImpedanceLinearResolution directResolution = new ImpedanceLinearResolution(lfNetwork, admittanceLinearResolutionParametersDirect);
         ImpedanceLinearResolution homopolarResolution = new ImpedanceLinearResolution(lfNetwork, admittanceLinearResolutionParametersHomopolar);
@@ -70,33 +67,21 @@ public class ShortCircuitUnbalancedEngine extends AbstractShortCircuitEngine {
 
     public void processAdmittanceLinearResolutionResults(LfNetwork lfNetwork, ImpedanceLinearResolution directResolution, ImpedanceLinearResolution homopolarResolution, ShortCircuitFault.ShortCircuitType shortCircuitType) {
 
-        int numResult = 0;
-        for (ImpedanceLinearResolution.ImpedanceLinearResolutionResult directResult : directResolution.results) {
+        for (Map.Entry<LfBus, ImpedanceLinearResolution.ImpedanceLinearResolutionResult> entry
+                : directResolution.results.entrySet()) {
 
-            ImpedanceLinearResolution.ImpedanceLinearResolutionResult homopolarResult = homopolarResolution.results.get(numResult);
-            numResult++;
+            LfBus lfBus = entry.getKey();
+            ImpedanceLinearResolution.ImpedanceLinearResolutionResult directResult = entry.getValue();
 
+            ImpedanceLinearResolution.ImpedanceLinearResolutionResult homopolarResult =
+                    homopolarResolution.results.get(lfBus);
             LfBus lfBus1 = directResult.getBus();
 
             List<ShortCircuitFault> matchingFaultsAtBus1 = new ArrayList<>(); //We build a list of all faults with bus1 matching with bus1 of ImpedanceLinearResolutionResult
 
-            if (shortCircuitType == ShortCircuitFault.ShortCircuitType.MONOPHASED
-                    || shortCircuitType == ShortCircuitFault.ShortCircuitType.BIPHASED
-                    || shortCircuitType == ShortCircuitFault.ShortCircuitType.BIPHASED_GROUND) {
-                for (CalculationLocation calculationLocation : solverFaultList) {
-                    ShortCircuitFault scfe = (ShortCircuitFault) calculationLocation;
-                    if (lfBus1.getId().equals(scfe.getLfBusInfo()) && scfe.getType() == shortCircuitType) {
-                        matchingFaultsAtBus1.add(scfe);
-                    }
-                }
-            }
-
-            if (shortCircuitType == ShortCircuitFault.ShortCircuitType.BIPHASED_COMMON_SUPPORT) {
-                for (CalculationLocation calculationLocation : solverBiphasedFaultList) {
-                    ShortCircuitFault scfe = (ShortCircuitFault) calculationLocation;
-                    if (lfBus1.getId().equals(scfe.getLfBusInfo()) && scfe.getType() == shortCircuitType) {
-                        matchingFaultsAtBus1.add(scfe);
-                    }
+            for (ShortCircuitFault scfe : solverFaultList) {
+                if (lfBus1.getId().equals(scfe.getCalculationLocation().getLfBusInfo()) && scfe.getType() == shortCircuitType) {
+                    matchingFaultsAtBus1.add(scfe);
                 }
             }
 
@@ -106,9 +91,9 @@ public class ShortCircuitUnbalancedEngine extends AbstractShortCircuitEngine {
 
             for (ShortCircuitFault scf : matchingFaultsAtBus1) {
 
-                Complex io = new Complex(0.);
-                Complex id = new Complex(0.);
-                Complex ii = new Complex(0.);
+                Complex io;
+                Complex id;
+                Complex ii;
 
                 ShortCircuitResult res;
 
@@ -130,7 +115,7 @@ public class ShortCircuitUnbalancedEngine extends AbstractShortCircuitEngine {
                         io = biphasedCalculator.getIo();
                         id = biphasedCalculator.getId();
                         ii = biphasedCalculator.getIi();
-                    } else if (shortCircuitType == ShortCircuitFault.ShortCircuitType.BIPHASED_GROUND) {
+                    } else {
                         BiphasedGroundShortCircuitCalculator biphasedGrCalculator = new BiphasedGroundShortCircuitCalculator(zdf, zof, scf.getZf(), v1dInit);
                         biphasedGrCalculator.computeCurrents();
 
@@ -149,13 +134,13 @@ public class ShortCircuitUnbalancedEngine extends AbstractShortCircuitEngine {
                 } else if (shortCircuitType == ShortCircuitFault.ShortCircuitType.BIPHASED_COMMON_SUPPORT) {
 
                     int numBiphasedResult = 0;
-                    ImpedanceLinearResolution.ImpedanceLinearResolutionResult.ImpedanceLinearResolutionResultBiphased biphasedHomopolarResult;
-                    for (ImpedanceLinearResolution.ImpedanceLinearResolutionResult.ImpedanceLinearResolutionResultBiphased biphasedDirectResult : directResult.getBiphasedResultsAtBus()) {
-                        biphasedHomopolarResult = homopolarResult.getBiphasedResultsAtBus().get(numBiphasedResult);
+                    TwoBusImpedanceLinearResolutionResult biphasedHomopolarResult;
+                    for (TwoBusImpedanceLinearResolutionResult biphasedDirectResult : directResult.getTwoBusResults()) {
+                        biphasedHomopolarResult = homopolarResult.getTwoBusResults().get(numBiphasedResult);
                         numBiphasedResult++;
 
                         LfBus lfBus2 = biphasedDirectResult.getBus2();
-                        if (lfBus2.getId().equals(scf.getLfBus2Info())) {
+                        if (lfBus2.getId().equals(scf.getCalculationLocation().getLfBus2Info())) {
 
                             Complex zo12 = biphasedHomopolarResult.getZ12();
                             Complex zo22 = biphasedHomopolarResult.getZ22();
@@ -182,9 +167,9 @@ public class ShortCircuitUnbalancedEngine extends AbstractShortCircuitEngine {
                                 throw new IllegalArgumentException(" short circuit fault of type : " + scf.getBiphasedType() + " not yet handled");
                             }
 
-                            //biCsSc.computeCurrents();
-                            //biphasedCommonCalculator.computeVoltages();
-                            //LfBus lfBus2 = biphasedDirectResult.getBus2();
+                            // biCsSc.computeCurrents();
+                            // biphasedCommonCalculator.computeVoltages();
+                            // LfBus lfBus2 = biphasedDirectResult.getBus2();
                             Complex v2dInit = biphasedDirectResult.getV2();
 
                             res = buildUnbalancedCommunSuppportResult(biCsSc.getId(), biCsSc.getIo(), biCsSc.getIi(),
@@ -274,8 +259,8 @@ public class ShortCircuitUnbalancedEngine extends AbstractShortCircuitEngine {
                                                                   ImpedanceLinearResolution.ImpedanceLinearResolutionResult homopolarResult, ShortCircuitFault scf,
                                                                   LfBus lfBus1, Complex v1dInit, LfNetwork lfNetwork,
                                                                   LfBus lfBus2, Complex v2dInit,
-                                                                  ImpedanceLinearResolution.ImpedanceLinearResolutionResult.ImpedanceLinearResolutionResultBiphased biphasedDirectResult,
-                                                                  ImpedanceLinearResolution.ImpedanceLinearResolutionResult.ImpedanceLinearResolutionResultBiphased biphasedHomopolarResult) {
+                                                                  TwoBusImpedanceLinearResolutionResult biphasedDirectResult,
+                                                                  TwoBusImpedanceLinearResolutionResult biphasedHomopolarResult) {
 
         //record the results
         FeedersAtNetwork equationSystemFeedersDirect = directResult.getEqSysFeeders();
